# automatic-eureka

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CLAUDE-shared.md  CLAUDE.md  LICENSE  README.md  app.py  cache.py  config.json  database.py  desktop.py  drive_client.py  drive_sync.py  file_utils.py  image-vault.spec  imagetagger.sh  metadata.py  migrate_add_item_type.py  migrate_hashes.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scanner.py  token-vault-claude-code-prompt.md
.claude/: README.md  settings.json  settings.local.json
.claude/agents/: code-simplifier.md  documentation.md  metadata-guardian.md  verify-app.md
.claude/commands/: build-electron.md  commit-push-pr.md  e2e-quick-test.md  refactor-simplify.md  review-pr.md  teleport-from-web.md  teleport-to-web.md  test-and-verify.md  verify-metadata-sync.md
.github/workflows/: tests.yml
docs/: index.md
electron/: main.js  oauth-handler.js  preload.js
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: README.md  __init__.py  conftest.py  test_cache.py  test_database.py  test_file_utils.py  test_metadata.py  test_scanner.py
tests/chrome/: README.md  __init__.py  test_bulk_ops.py  test_gallery_views.py  test_search_filter.py  test_token_edit.py  test_upload.py
tests/chrome/page_objects/: __init__.py  base_page.py  main_page.py  token_modal.py  upload_modal.py
